    
March:
    - Concept, brainstorming, initial meetings with Antal, Martin (TICCLops), Tanja (VICI) (starting end of february)
    - Wrote first jobserver and jobclient (starting end of february)
    - Discarded jobserver and jobclient, and started RESTful webservice
    - Invented parameter class scheme
    - Invented format class scheme and inputformat, outputformat specification
    - Implemented smart file uploader
    - First commit to SVN
    - jobservice.py is now the primary and callable script instead of the custom settings.py
    - Initial fixes -- system now runs partially
    - Added index of inputfiles to the XML response
    - Added inputformats/outputformats to response XML
    - Implemented fromxml parsers for parameters and formats
    - Implemented archive extraction
    - Implemented passing input and outputdir to blackbox
    - Implemented selecting a preinstalled corpora
    - Implemented free text submission
    - Implemented interface in webservice itself (using XSLT)
    - Implemented parameter validation and feedback
    - First complete test of the system on ucto

April:
    - Fixed custom errors
    - Look into and fix large file upload problem
    - View of status 1 (running) now auto-refreshes
    - Added reset/go back function to run system on same input (but with different params), and abort buttons
    - Fixed zombie problem
    - Confine particular formats to subdirectories
    - Add ability to extract without subdirs
    - Implemented downloading all files as archive
    - Implemented writing configuration file (clam.xml) for the blackbox