@@ -1,11 +1,8 @@
 
-
-- Test parameters
 - Finish user authentication
 
 - Implement parameter forbid, require
-
-- Important! Will setting parameter.value break multiuser support due not not being thread-safe? 
+ 
 
 - Encoding check?
 
