@@ -30,3 +30,4 @@ April:
     - Add ability to extract without subdirs
     - Implemented downloading all files as archive
     - Implemented writing configuration file (clam.xml) for the blackbox
+    - Made parameter implementation thread-safe
